房间日志修改